# awesome-mcp-registry

./: .dockerignore  .e2bignore  .env  .gitignore  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  Makefile  README.dev.md  README.md  biome.json  docker-compose.yml  e2b.Dockerfile  e2b.toml  eslint.config.js  eslint.config.mjs  helper.ts  index.d.ts  install-python-deps.sh  install.sh  lefthook.yml  package.json  pnpm-lock.yaml  schema.ts  start.sh  status.sh  stop.sh  terminal-security.json  terminal-tool.json  tsconfig.json  types.ts  vitest.config.ts  vitest.setup.ts
.github/: publish.yaml  test.yaml
.github/actions/build-push-docker/: action.yml
.github/workflows/: biome.yml  deploy-toolsdk-registry.yaml  publish.yaml  test.yaml
api/: cli-generator.js  server.js
api/services/: pdf-service.js  search-service.js
api/utils/: file.js  logger.js  queue.js  validation.js
config/: categories.mjs  featured.mjs  verified.mjs
doc/: Makefile.html  README.md.html  package.json.html  terminal-security.json.html  terminal-tool.json.html  tsconfig.json.html
doc/docs/: README.tpl.md.html  docs-config.json.html  guide.md.html
doc/indexes/: categories-list.json.html  packages-list.json.html
docs/: DEVELOPMENT.md  README.tpl.md  SEARCH.md  docs-config.json  guide.md
e2b-template/node/: e2b.Dockerfile  e2b.toml
e2b-template/python/: e2b.Dockerfile  e2b.toml
indexes/: categories-list.json  packages-list.json
python-mcp/: pyproject.toml
scripts/: add-star.ts  cat-dirs.ts  check-config.ts  indexing-lists.ts  py-deps-lists.ts  py-test-mcp-clients.ts  read-mcp-client.ts  readme-gen.ts  rename-json-files.ts  search-index.js  search-index.ts  test-mcp-clients.ts
scripts/server/: install.sh  start.sh  stop.sh
src/: helper.ts  schema.ts  types.ts  utils.ts
src/api/: home.html  index.ts  package-controller.ts  package-handler.ts  package-route.ts  package-so.ts  package.test.ts  routes.ts  search-route.ts  server.ts  tool-controller.ts  tool-so.ts
src/api/handlers/: package.handler.ts  search.handler.ts
src/api/routes/: config.route.ts  package.route.ts  search.route.ts
src/core/executor/: ExecutorFactory.ts  LocalExecutor.ts  SandboxExecutor.ts
src/core/package/: PackageRepository.ts  PackageService.ts
src/core/sandbox/: SandboxFactory.ts  SandboxPool.ts
src/core/sandbox/clients/: DaytonaSandboxClient.ts
src/core/search/: SearchService.ts
src/domains/config/: config-route.ts  config-schema.ts  config-types.ts
src/domains/executor/: executor-factory.ts  executor-interface.ts  executor-types.ts  local-executor.ts  sandbox-executor.ts
src/domains/package/: package-handler.ts  package-repository.ts  package-route.ts  package-schema.ts  package-so.test.ts  package-so.ts  package-types.ts
src/domains/sandbox/: sandbox-client-interface.ts  sandbox-factory.ts  sandbox-pool-so.ts  sandbox-types.ts  sandbox-utils.ts
src/domains/sandbox/clients/: daytona-client.ts  e2b-client.ts  sandock-client.ts
src/domains/search/: search-handler.ts  search-route.ts  search-schema.ts  search-so.ts  search.html
src/sandbox/: mcp-sandbox-client.test.ts  mcp-sandbox-client.ts
src/search/: search-route.ts  search-service.ts  search.test.ts
src/shared/config/: environment.ts
src/shared/schemas/: common-schema.ts  index.ts
src/shared/scripts-helpers/: index.ts
src/shared/types/: config.types.ts  executor.types.ts  index.ts  package.types.ts  sandbox.types.ts
src/shared/utils/: file-util.ts  file.util.ts  index.ts  mcp-client-util.ts  mcp-client.util.ts  package-util.ts  promise-util.ts  response-util.ts  response.util.ts  string-util.ts  validation-util.ts  validation.util.ts
