[project]
name = "python-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ableton-mcp>=1.0.4",
    "acp-mcp-server>=0.0.3",
    "adb-mysql-mcp-server>=1.0.0",
    "aipolabs-mcp>=0.0.1b5",
    "alibabacloud-mcp-server>=0.7.1",
    "apple-books-mcp>=0.1.5",
    "aws-ec2-pricing>=0.1.10",
    "aws-lambda>=2.1.3",
    "awslabs-cdk-mcp-server>=1.0.5",
    "awslabs-nova-canvas-mcp-server>=1.0.4",
    "blender-mcp>=1.2.1",
    "browser-use>=0.1.19",
    "claude-code>=0.0.1",
    "code-analysis>=0.1.5",
    "comfy-mcp-server>=0.1.11",
    "computer-control-mcp>=0.3.0",
    "deepview-mcp>=0.2.4",
    "garth-mcp-server>=0.0.8",
    "gcp-mcp-server>=0.1.0",
    "grasshopper-mcp>=0.1.0",
    "heygen-mcp>=0.0.3",
    "jupyter-mcp-server>=0.11.0",
    "linode-mcp>=0.0.1",
    "llm-bridge-mcp>=0.1.2",
    "mcp-12306>=0.1.8",
    "mcp-perplexity>=0.5.8",
    "mcp-playwright-scraper>=0.1.0",
    "mcp-pyautogui-server>=0.1.2",
    "mcp-python>=0.1.4",
    "mcp-python-interpreter>=1.1",
    "mcp-rememberizer-vectordb>=0.1.3",
    "mcp-rquest>=0.1.9",
    "mcp-server-ancestry>=0.1.1",
    "mcp-server-browser-use>=0.1.0",
    "mcp-server-chatgpt-app>=0.1.5",
    "mcp-server-code-assist>=0.1.3",
    "mcp-server-fetch>=2025.4.7",
    "mcp-server-git>=2025.7.1",
    "mcp-server-make>=0.3.1",
    "mcp-server-perplexity>=0.1.2",
    "mcp-server-rememberizer>=0.1.6",
    "mcp-server-sentry>=2025.1.14",
    "mcp-server-sqlite>=2025.4.25",
    "mcp-server-time>=2025.8.4",
    "mcp-server-tree-sitter>=0.5.1",
    "mcp-solver>=2.0.0",
    "mcp-sonic-pi>=0.1.0",
    "mcp-superiorapis>=1.1.9",
    "mcp-tinybird>=1.0.3",
    "midjourney>=0.0.1",
    "modal>=1.1.3",
    "nautobot-mcp>=0.1.2",
    "notte-browser>=1.6.5",
    "penpot-mcp>=0.1.2",
    "photoshop>=0.21.9",
    "python-local>=0.1.0",
    "qanon-mcp>=0.3.0",
    "scrapling-fetch-mcp>=0.1.6",
    "serena>=0.9.1",
    "sketchfab-mcp>=0.1.2",
    "speckle>=0.2.7",
    "trakt>=3.4.0",
    "twitter>=1.19.6",
    "undetected-chromedriver>=3.5.5",
    "videodb-director-mcp>=0.1.7",
    "web-crawler>=0.0.4",
    "web-scraper>=1.0",
    "wikipedia>=1.4.0",
]
