[project]
name = "python-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "ableton-mcp>=1.0.4",
  "acp-mcp-server>=0.0.3",
  "adb-mysql-mcp-server>=1.0.0",
  "agora-mcp>=0.1.10",
  "akshare-one-mcp>=0.1.1",
  "alibabacloud-mcp-server>=0.7.1",
  "anki-mcp>=0.1.0",
  "arxiv-mcp-server>=0.3.1",
  "awslabs-aws-documentation-mcp-server>=1.1.6",
  "awslabs-bedrock-kb-retrieval-mcp-server>=1.0.7",
  "awslabs-cdk-mcp-server>=1.0.7",
  "backlinks-mcp>=0.1.7",
  "blender-mcp>=1.2.1",
  "caltrain-mcp>=0.8.4",
  "casual-mcp-server-words>=1.0.1",
  "clickhouse-mcp-server>=0.1.0",
  "cryo-mcp>=0.1.5",
  "ddg-mcp>=0.1.1",
  "devrev-mcp>=0.4.2",
  "fewsats-mcp>=0.1.7",
  "fpl-mcp>=0.1.6",
  "freecad-mcp>=0.1.13",
  "frida-mcp>=0.1.1",
  "garth-mcp-server>=0.0.8",
  "git-mcp>=0.3.2",
  "gmail-mcp>=0.1.3",
  "grasshopper-mcp>=0.1.0",
  "greptimedb-mcp-server>=0.2.2",
  "haiguitang-mcp>=0.1.2",
  "hh-jira-mcp-server>=0.1.0",
  "interactive-feedback>=2.5.10.3",
  "investor-agent>=0.1.4",
  "jnews-mcp-server>=0.1.3",
  "kaggle-mcp>=0.1.0",
  "kroger-mcp>=0.2.0",
  "logseq-mcp>=0.2.0",
  "macos-notification-mcp>=0.1.1",
  "mcp-applemusic>=0.1.5",
  "mcp-azure-devops>=0.6.0",
  "mcp-chess>=0.1.9",
  "mcp-datetime>=0.1.4",
  "mcp-excel-server>=1.0.4",
  "mcp-fleur>=0.1.2",
  "mcp-google-analytics>=0.0.3",
  "mcp-google-cse>=0.1.4",
  "mcp-hn>=0.1.0",
  "mcp-kubernetes-server>=0.1.6",
  "mcp-neo4j-cypher>=0.2.4",
  "mcp-nixos>=1.0.0",
  "mcp-ollama>=0.1.3",
  "mcp-outline>=0.2.2",
  "mcp-playwright-scraper>=0.1.0",
  "mcp-python>=0.1.4",
  "mcp-rquest>=0.1.9",
  "mcp-search-linkup>=0.1.5",
  "mcp-server-aliyun-observability>=0.2.9",
  "mcp-server-calculator>=0.2.0",
  "mcp-server-chatgpt-app>=0.1.5",
  "mcp-server-code-assist>=0.1.3",
  "mcp-server-diff-python>=0.1.2",
  "mcp-server-email>=0.1.6",
  "mcp-server-fetch>=2025.4.7",
  "mcp-server-git>=2025.7.1",
  "mcp-server-ida>=0.3.4",
  "mcp-server-macos-defaults>=0.1.2",
  "mcp-server-monday>=0.2.9",
  "mcp-server-opendal>=0.2.0",
  "mcp-server-pacman>=0.2.0",
  "mcp-server-perplexity>=0.1.2",
  "mcp-server-reddit>=0.2.0",
  "mcp-server-restart>=0.1.2",
  "mcp-server-sqlite>=2025.4.25",
  "mcp-server-starrocks>=0.1.2",
  "mcp-server-time>=2025.8.4",
  "mcp-server-tree-sitter>=0.5.1",
  "mcp-shell-server>=1.0.3",
  "mcp-sleep>=0.1.1",
  "mcp-slicer>=0.1.2",
  "mcp-sonic-pi>=0.1.0",
  "mcp-text-editor>=1.0.2",
  "mcp-think-tool>=0.1.0",
  "mcp-timeplus>=0.1.6",
  "mcp-timeserver>=0.1.0",
  "mcp-tree-explorer>=0.1.4",
  "mcp-wechat-moments>=0.0.5",
  "mcp2serial>=0.1.3",
  "mcpunk>=0.4.2",
  "memory-mcp-server>=0.1.3",
  "mindmap-mcp-server>=0.1.1",
  "mochow-mcp-server>=1.0.1",
  "mysqldb-mcp-server>=0.1.2",
  "oracle-mcp-server>=1.0.9",
  "orly-mcp>=0.1.3",
  "owl-mcp>=0.1.2",
  "penpot-mcp>=0.1.2",
  "phone-mcp>=0.3.6",
  "postgres-mcp>=0.3.0",
  "python-local>=0.1.0",
  "qanon-mcp>=0.3.0",
  "random-number-mcp>=0.1.1",
  "rapidocr-mcp>=0.4.0",
  "rqbit-mcp>=0.9.0",
  "scrapling-fetch-mcp>=0.1.6",
  "searxng-simple-mcp>=1.2.0",
  "setu-mcp-kyc>=0.1.1",
  "setu-mcp-upi-deeplinks>=0.1.0",
  "sherlock-mcp>=0.1.5",
  "sketchfab-mcp>=0.1.2",
  "think-mcp>=0.1.12",
  "time-mcp-local>=0.1.3",
  "vectara-mcp>=0.1.4",
  "videodb-director-mcp>=0.1.7",
  "wcgw>=5.4.2",
  "wecom-bot-mcp-server>=0.1.0",
  "ydb-mcp>=0.1.5",
  "yfmcp>=0.4.4",
  "ygg-torrent-mcp>=1.8.0",
  "youtube-dlp-server>=0.1.0"
]
